k8s/k8s.local.yml
apiVersion: v1
kind: Service
metadata:
  name: emp-api
  namespace: beta
spec:
  selector:
    app: emp-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3333
  type: LoadBalancer
  
---

apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: beta
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 3334
      targetPort: 3334

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-api
  namespace: beta
  labels:
    app: emp-api
spec:
  selector:
    matchLabels:
      app: emp-api
  template:
    metadata:
      labels:
        app: emp-api
    spec:
      containers:
      - name: emp-api
        image: localhost:5000/employee-api
        ports:
        - containerPort: 3333
        imagePullPolicy: Always
      serviceAccountName: default

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: beta
  labels:
    app: auth-api
spec:
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: localhost:5000/auth-api
        ports:
        - containerPort: 3334
        imagePullPolicy: Always
      serviceAccountName: default
