k8s/aks-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-api-ingress
  namespace: beta
spec:
  defaultBackend:
    service:
      name: emp-api
      port:
        number: 80
